Commiting some files with vim-fugitive

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,4 +3,5 @@
 <ul>
   <li><a href="/tasks">Task Index</a></li>
   <li><a href="/tasks/new">New Task</a></li>
+  <li><a href="/easteregg">Easteregg Index</a></li>
 </ul>
